--- a/.mocharc.json
+++ b/.mocharc.json
@@ -13,6 +13,6 @@
   "require": ["ts-node/register", "tsconfig-paths/register"],
   "extension": ["ts", "js", "json"],
   "spec": ["{src,test}/**/*.spec.ts"],
-  "package": "../package.json",
-  "timeout": 20000
+  "package": "./package.json",
+  "timeout": 60000
 }
