--- a/.nycrc
+++ b/.nycrc
@@ -3,5 +3,5 @@
   "all": true,
   "check-coverage": true,
   "include": [ "src/**/*.ts" ],
-  "exclude": [ "src/**/*.spec.ts", "src/main.ts" ]
+  "exclude": [ "src/**/*.spec.ts", "src/reflection/debug/**/*.ts", "src/cli.ts" ]
 }
